--- a/web_interface/templates/index.html
+++ b/web_interface/templates/index.html
@@ -165,6 +165,10 @@
                 
                 <h4>Add New Endpoint</h4>
                 <div class="form-group">
+                    <label for="endpoint-name">Name (optional):</label>
+                    <input type="text" id="endpoint-name" placeholder="e.g., Main Display, Backup Server">
+                </div>
+                <div class="form-group">
                     <label for="endpoint-ip">IP Address:</label>
                     <input type="text" id="endpoint-ip" placeholder="192.168.1.100">
                 </div>
