--- a/web_interface/templates/index.html
+++ b/web_interface/templates/index.html
@@ -70,6 +70,13 @@
                 </div>
             </div>
 
+            <div class="card">
+                <h3>TCP Endpoints</h3>
+                <div id="endpoints-summary">
+                    <p>Loading...</p>
+                </div>
+            </div>
+
             <button class="btn btn-primary" onclick="refreshDashboard()">Refresh Status</button>
         </div>
 
@@ -222,14 +229,6 @@
                     <input type="password" id="confirm-password" placeholder="Confirm new password">
                 </div>
                 <button class="btn btn-primary" onclick="changePassword()">Update Password</button>
-            </div>
-
-            <div class="card">
-                <h3>System Information</h3>
-                <div id="system-info">
-                    <p>Loading system information...</p>
-                </div>
-                <button class="btn btn-secondary" onclick="loadSystemInfo()">Refresh</button>
             </div>
 
             <div class="card">
