--- a/web_interface/templates/index.html
+++ b/web_interface/templates/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JLBMaritime Wi-Fi Manager</title>
+    <title>JLBMaritime ADS-B System Manager</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     <header>
         <div class="header-content">
             <img src="{{ url_for('static', filename='logo.png') }}" alt="JLBMaritime Logo" class="logo">
-            <h1>Wi-Fi Manager</h1>
+            <h1>ADS-B System Manager</h1>
             <button class="btn btn-logout" onclick="logout()">Logout</button>
         </div>
     </header>
