--- a/web_interface/templates/index.html
+++ b/web_interface/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JLBMaritime ADS-B System Manager</title>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='Favicon.png') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
