--- a/web_interface/templates/index.html
+++ b/web_interface/templates/index.html
@@ -62,11 +62,19 @@
             </div>
 
             <div class="card">
-                <h3>System Information</h3>
+                <h3>ADS-B Configuration Summary</h3>
                 <div class="status-grid">
                     <div class="status-item">
-                        <span class="label">Hostname:</span>
-                        <span id="system-hostname">Loading...</span>
+                        <span class="label">Output Format:</span>
+                        <span id="config-output-format">Loading...</span>
+                    </div>
+                    <div class="status-item">
+                        <span class="label">Aircraft Filter:</span>
+                        <span id="config-aircraft-filter">Loading...</span>
+                    </div>
+                    <div class="status-item">
+                        <span class="label">Altitude Filter:</span>
+                        <span id="config-altitude-filter">Loading...</span>
                     </div>
                 </div>
             </div>
@@ -75,6 +83,16 @@
                 <h3>TCP Endpoints</h3>
                 <div id="endpoints-summary">
                     <p>Loading...</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <h3>System Information</h3>
+                <div class="status-grid">
+                    <div class="status-item">
+                        <span class="label">Hostname:</span>
+                        <span id="system-hostname">Loading...</span>
+                    </div>
                 </div>
             </div>
 
